--- a/MyApp/Views/Home/Student.cshtml
+++ b/MyApp/Views/Home/Student.cshtml
@@ -1,41 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@* Razor View 파일: C#코드가 HTML코드와 함께 렌더링되는 View 파일 *@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-        <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />*@
-    </head>
-    <body>
-        <div style="margin:10px;">
-            <h3>Add New Student</h3>
-            <form class="form form-horizontal" method="post">
-                <div class="form-group">
-                    <img src="~/images/main.jpg" alt="메인이미지" style="width:290px; height:320px;margin:10px;" />
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />*@
+</head>
+<body>
+    <div style="margin:10px;">
+        <h2>회원 등록</h2>
+        <form class="form form-horizontal" method="post">
+            <div class="form-group">
+                <img src="~/images/main.jpg" alt="메인이미지" style="width:290px; height:320px;margin:10px;" />
+            </div>
+            <div class="form-group">
+                <div class="col-md-3">
+                    <label>Name:</label>
+                    <input type="text" class="form-control" name="name" />
                 </div>
-                <div class="form-group">
-                    <div class="col-md-3">
-                        <label>Name:</label>
-                        <input type="text" class="form-control" name="name" />
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-3">
+                    <label>Age:</label>
+                    <input type="text" class="form-control" name="age" />
                 </div>
-                <div class="form-group">
-                    <div class="col-md-3">
-                        <label>Age:</label>
-                        <input type="text" class="form-control" name="age" />
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-3">
+                    <label>Country:</label>
+                    <input type="text" class="form-control" name="country" />
                 </div>
-                <div class="form-group">
-                    <div class="col-md-3">
-                        <label>Country:</label>
-                        <input type="text" class="form-control" name="country" />
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-        </div>
-    </body>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
+</body>
 </html>
