Add Token Validation Check(ValidateAntiForgeryToken)

--- a/MyApp/Views/_ViewImports.cshtml
+++ b/MyApp/Views/_ViewImports.cshtml
@@ -1,2 +1,6 @@
-﻿@* Views폴더 아래에 있는 Razer View 파일에 대한 TagHelper 연동 *@
+﻿@*
+    // Razor View Imports 파일(Add > New Item > import 로 검색)
+    // Student.cshtml에서 asp-validation-for tag를 사용하기 위해 추가해야 하는 파일
+    // Views폴더 아래에 있는 Razer View 파일에 대한 TagHelper 연동
+*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
