--- a/MyApp/Views/Home/Student.cshtml
+++ b/MyApp/Views/Home/Student.cshtml
@@ -1,10 +1,10 @@
 ﻿@* Razor View 파일: C#코드가 HTML코드와 함께 렌더링되는 View 파일 *@
-
-@* @기호: C#코드를 쓸 수 있게 해주는 접두사 *@
+@* 
+    // @기호: C#코드를 쓸 수 있게 해주는 접두사
+    // namespace 추가
+*@
 @using MyApp.Models
 @model Student
-
-@* asp-for TagHelper 사용시 id와 Name 속성 자동 생성됨 *@
 
 <!DOCTYPE html>
 <html>
@@ -17,6 +17,10 @@
 <body>
     <div style="margin:10px;">
         <h2>회원 등록</h2>
+        @*
+        // ASP.NET Core에서는 form 안에 Token이 자동으로 생성됨
+        // asp-antiforgery="false" 사용시 Token 생성이 안됨
+        *@
         <form class="form form-horizontal" method="post">
             <div class="form-group">
                 <img src="~/images/main.jpg" alt="메인이미지" style="width:290px; height:320px;margin:10px;" />
@@ -24,7 +28,10 @@
             <div class="form-group">
                 <div class="col-md-3">
                     <label>Name:</label>
-                    @* TagHelper 추가 *@
+                    @*
+                    // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
+                    // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
+                    *@
                     <input type="text" class="form-control" asp-for="Name" />
                     <span asp-validation-for="Name"></span>
                 </div>
@@ -32,7 +39,10 @@
             <div class="form-group">
                 <div class="col-md-3">
                     <label>Age:</label>
-                    @* TagHelper 추가 *@
+                    @*
+                    // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
+                    // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
+                    *@
                     <input type="text" class="form-control" asp-for="Age" />
                     <span asp-validation-for="Age"></span>
                 </div>
@@ -40,7 +50,10 @@
             <div class="form-group">
                 <div class="col-md-3">
                     <label>Country:</label>
-                    @* TagHelper 추가 *@
+                    @*
+                    // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
+                    // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
+                    *@
                     <input type="text" class="form-control" asp-for="Country" />
                     <span asp-validation-for="Country"></span>
                 </div>
