--- a/MyApp/Views/Home/Student.cshtml
+++ b/MyApp/Views/Home/Student.cshtml
@@ -6,15 +6,11 @@
 @using MyApp.ViewModels
 @model StudentTeacherViewModel
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-        <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />*@
-    </head>
-    <body>
+@{ 
+    ViewBag.Title = "Student";
+    Layout = "../Shared/_Layout.cshtml";
+}
+
         <div style="margin:10px;">
             <h2>Add New Student</h2>
             @*
@@ -82,5 +78,3 @@
                 </tbody>
             </table>
         </div>
-    </body>
-</html>
