MVC&Razor Review

--- a/MyApp/Views/_ViewImports.cshtml
+++ b/MyApp/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     // Razor View Imports 파일(Add > New Item > import 로 검색)
     // Student.cshtml에서 asp-validation-for tag를 사용하기 위해 추가해야 하는 파일
-    // Views폴더 아래에 있는 Razer View 파일에 대한 TagHelper 연동
+    // 한번의 선언으로 Views폴더 아래에 있는 Razer View 파일에서 TagHelper, namespace 공통으로 사용 가능
     // RunTime 진행 시 Razor Engine이 View file을 컴파일하기 이전에 view 폴더 안에 있는 코드(html, C#, TagHelper)가 올바르게 작동하는지 확인하기위해 찾아보는 파일
 *@
 
