--- a/MyApp/Views/_ViewStart.cshtml
+++ b/MyApp/Views/_ViewStart.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
     // Razor View Start 파일(Add > New Item > start 로 검색)
-    // Razor View Engine이 View Start 파일 존재여부 확인 후 존재하면 해당 파일의 코드를 먼저 실행함
+    // Razor View Engine이 View 파일 렌더링 이전에 View Start 파일 존재여부 먼저 확인 후 존재하면 해당 파일의 코드를 먼저 실행함
     // 중복 코드 방지
 *@
 @{
