--- a/MyApp/Views/Home/Student.cshtml
+++ b/MyApp/Views/Home/Student.cshtml
@@ -10,58 +10,68 @@
     ViewBag.Title = "Student";
 }
 
-<div style="margin:10px;">
-    <h2>Add New Student</h2>
-    @*
-        // ASP.NET Core에서는 form 안에 Token이 자동으로 생성됨
-        // form 속성에 asp-antiforgery="false" 사용시 Token 생성이 안됨
-    *@
-    <form class="form form-horizontal" method="post">
-        <div class="form-group">
-            <img src="~/images/main.jpg" alt="메인이미지" style="width:290px; height:320px;margin:10px;" />
+<h2>Add New Student</h2>
+@*
+    // ASP.NET Core에서는 form 안에 Token이 자동으로 생성됨
+    // form 속성에 asp-antiforgery="false" 사용시 Token 생성이 안됨
+*@
+<form class="form form-horizontal" method="post">
+    <div class="form-group">
+        <img src="~/images/main.jpg" alt="메인이미지" style="width:290px; height:320px;margin:10px;" />
+    </div>
+    <div class="form-group">
+        <div class="col-md-3">
+            <label>Name:</label>
+            @*
+                // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
+                // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
+            *@
+            <input type="text" class="form-control" asp-for="@Model.Student.Name" />
+            <span asp-validation-for="@Model.Student.Name"></span>
         </div>
-        <div class="form-group">
-            <div class="col-md-3">
-                <label>Name:</label>
-                @*
-                    // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
-                    // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
-                *@
-                <input type="text" class="form-control" asp-for="@Model.Student.Name" />
-                <span asp-validation-for="@Model.Student.Name"></span>
-            </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-3">
+            <label>Age:</label>
+            @*
+                // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
+                // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
+            *@
+            <input type="text" class="form-control" asp-for="@Model.Student.Age" />
+            <span asp-validation-for="@Model.Student.Age"></span>
         </div>
-        <div class="form-group">
-            <div class="col-md-3">
-                <label>Age:</label>
-                @*
-                    // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
-                    // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
-                *@
-                <input type="text" class="form-control" asp-for="@Model.Student.Age" />
-                <span asp-validation-for="@Model.Student.Age"></span>
-            </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-3">
+            <label>Country:</label>
+            @*
+                // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
+                // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
+            *@
+            <input type="text" class="form-control" asp-for="@Model.Student.Country" />
+            <span asp-validation-for="@Model.Student.Country"></span>
         </div>
-        <div class="form-group">
-            <div class="col-md-3">
-                <label>Country:</label>
-                @*
-                    // TagHelper 사용을 위한 asp-validation-for, asp-for Tag 추가
-                    // asp-for Tag 사용시 id와 Name 속성 자동 생성됨
-                *@
-                <input type="text" class="form-control" asp-for="@Model.Student.Country" />
-                <span asp-validation-for="@Model.Student.Country"></span>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+</form>
 
-    <hr />
+<hr />
 
-    @*
-        // Partial View 연동
-        // 코드 재사용성 향상
-    *@
-    @await Html.PartialAsync("_TeacherTable", Model);
-
-</div>
+<h3>학생리스트</h3>
+<table class="table">
+    <thead>
+        <th>이름</th>
+        <th>나이</th>
+        <th>Action</th>
+    </thead>
+    <tbody>
+        @foreach (var student in Model.Students)
+        {
+        <tr>
+            <td>@student.Name</td>
+            <td>@student.Age</td>
+            <td><a asp-controller="Home" asp-action="Detail" asp-route-id="@student.Id">Detail</a></td>
+        </tr>
+        }
+    </tbody>
+</table>
