--- a/MyApp/Views/Shared/_Layout.cshtml
+++ b/MyApp/Views/Shared/_Layout.cshtml
@@ -20,11 +20,11 @@
         </div>
     </nav>
 
-    <div>
+    <div class="container-fluid">
         @RenderBody()
     </div>
 
-    <div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="navbar navbar-default">
         <div class="container-fluid">
             <span class="navbar-text">
                 My Footer
