--- a/MyApp/Views/Shared/_Layout.cshtml
+++ b/MyApp/Views/Shared/_Layout.cshtml
@@ -17,6 +17,9 @@
                  <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                  <li><a asp-controller="Home" asp-action="Student">Student</a></li>
              </ul>
+            <ul class="nav navbar-nav pull-right">
+                <li><a asp-controller="Account" asp-action="Register">회원가입</a></li>
+            </ul>
         </div>
     </nav>
 
