--- a/MyApp/Views/Shared/_Layout.cshtml
+++ b/MyApp/Views/Shared/_Layout.cshtml
@@ -17,9 +17,10 @@
                  <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                  <li><a asp-controller="Home" asp-action="Student">Student</a></li>
              </ul>
-            <ul class="nav navbar-nav pull-right">
-                <li><a asp-controller="Account" asp-action="Register">회원가입</a></li>
-            </ul>
+             <ul class="nav navbar-nav pull-right">
+                 <li><a asp-controller="Account" asp-action="Register">회원가입</a></li>
+                 <li><a asp-controller="Account" asp-action="Login">로그인</a></li>
+             </ul>
         </div>
     </nav>
 
