--- a/MyApp/Views/Account/Register.cshtml
+++ b/MyApp/Views/Account/Register.cshtml
@@ -1,14 +1,11 @@
 ﻿@model RegisterViewModel
 
-@{
-    ViewBag.Title = "회원가입";
-}
-
 <div class="row">
     <div class="col-md-2 col-md-offset-5">
         <h2 style="text-align:center">회원 가입</h2>
         <hr />
         <form method="post" class="form-horizontal">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email">이메일</label>
                 <input asp-for="Email" class="form-control" />
@@ -35,7 +32,7 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <buttom type="submit" class="btn btn-info">등록</buttom>
+                <input type="submit" class="btn btn-info" value="등록" />
             </div>
         </form>
     </div>
