--- a/MyApp/Views/Account/Login.cshtml
+++ b/MyApp/Views/Account/Login.cshtml
@@ -9,6 +9,7 @@
         <h2 style="text-align:center">로그인</h2>
         <hr />
         <form method="post" class="form-horizontal">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email">이메일</label>
                 <input asp-for="Email" class="form-control" />
@@ -20,7 +21,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <buttom type="submit" class="btn btn-info">로그인</buttom>
+                <input type="submit" class="btn btn-info" value="로그인" />
             </div>
         </form>
     </div>
