--- a/MyApp/Views/Home/Index.cshtml
+++ b/MyApp/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model StudentTeacherViewModel
+﻿@model ReflectionIT.Mvc.Paging.PagingList<MyApp.Models.Teacher>
+@using ReflectionIT.Mvc.Paging
+@addTagHelper *, ReflectionIT.Mvc.Paging
 
 @{
     ViewBag.Title = "Home";
@@ -10,11 +12,29 @@
     </div>
 </div>
 
-@*
-    //Partial View 연동(코드 재사용성 향상)
-    //await, Async 키워드 함께 사용시 deadlock 예방 가능
-    //Model을 쓰지 않고 단순 HTML인 경우 두번째 매개변수는 넘기지 않아도 됨
-    //@await Html.PartialAsync("_TeacherTable")
-*@
+@*<nav>
+    @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
+</nav>*@
 
-@await Html.PartialAsync("_TeacherTable", Model)
+<h2>Our Teachers</h2>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Class</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var teacher in Model)
+        {
+            <tr>
+                <td>@teacher.Name</td>
+                <td>@teacher.Class</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<nav>
+    <vc:pager paging-list="@Model" />
+</nav>
